--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,21 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.27",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "apollo-server-express": "^2.16.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.3"
   }
