--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Jan Völker",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.0",
@@ -21,6 +22,7 @@
     "@types/bcrypt": "^3.0.0",
     "apollo-server-express": "^2.16.1",
     "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
